Bug fixes, UI additions, About screen
Uploading .torrent files almost ready!